# snaplet-liftajax

./: LICENSE  README.md  snaplet-liftajax.cabal
example/addForm/: add.hs
example/addForm/snaplets/heist/templates/: ajax.tpl
example/addForm/static/: liftAjax.js
src/Snap/Snaplet/: LiftAjax.hs
src/Snap/Snaplet/LiftAjax/: Callback.hs  Js.hs  Splice.hs  State.hs
